chore(runtime): added runtime config for ease of use
Added javafx:run build plugin